# ArcadeLauncher-Client

./: .gitattributes  .gitignore  ARCHITECTURE_REVIEW.md  ArcadeLauncher-Client.sln  ArcadeLauncher-Client.vcxproj  CLAUDE.md  CMakeLists.txt  DEVNOTES.md  GameLauncher.sln  GameLauncher.vcxproj  HANDOFF.md  PORTING_LINUX.md  README.md
.github/workflows/: server-client-release.yml
installer/: ArcadeLauncher.wxs  License.rtf
resources/: ArcadeLauncher.manifest  ArcadeLauncher.rc
scripts/: GetLzmaSDK.ps1  build.ps1  get_sqlite.ps1
src/: AccountDialog.cpp  AccountDialog.h  App.cpp  App.h  AppUpdater.cpp  AppUpdater.h  ArchiveExtractor.cpp  ArchiveExtractor.h  AssetEnsure.cpp  AssetEnsure.h  Config.cpp  Config.h  DarkTheme.cpp  DarkTheme.h  DiscordPresence.cpp  DiscordPresence.h  DolphinConfig.cpp  DolphinConfig.h  DuckStationConfig.cpp  DuckStationConfig.h  EmulatorDownloader.cpp  EmulatorDownloader.h  EmulatorUpdateChecker.cpp  EmulatorUpdateChecker.h  FirstLaunchSetup.cpp  FirstLaunchSetup.h  GameEditDialog.cpp  GameEditDialog.h  GameLibrary.cpp  GameLibrary.h  GamepadInput.cpp  GamepadInput.h  GopherConfig.cpp  GopherConfig.h  IgdbClient.cpp  IgdbClient.h  IgdbPlatforms.h  IgdbSync.cpp  IgdbSync.h  IniFile.h  (+40 more)
src/Platform/: AudioIO.h  Crypto.h  EmulatorScanner.cpp  EmulatorScanner.h  EpicScanner.cpp  EpicScanner.h  GogScanner.cpp  GogScanner.h  Net.h  Paths.cpp  Paths.h  Platform.h  Renderer2D.h  Sha256.cpp  SteamScanner.cpp  SteamScanner.h  Text.cpp  Text.h  Window.h
src/Social/: SocialJson.h  SocialManager.cpp  SocialManager.h  SocialTypes.h  VoiceEngine.cpp  VoiceEngine.h  WebSocketClient.cpp  WebSocketClient.h
src/core/: CoreSmoke.cpp  SelfCheckMain.cpp
